--- a/roles/mikeandwan_us/tasks/maw_solr_init.yml
+++ b/roles/mikeandwan_us/tasks/maw_solr_init.yml
@@ -36,7 +36,11 @@
 
 - name: redefine unique key
   ansible.builtin.command:
-    cmd: "podman exec -it {{ solr_container.container.Name }} sed -i -E 's/<uniqueKey>id<\\/uniqueKey>/<uniqueKey>solr_id<\\/uniqueKey>/' /var/solr/data/multimedia-categories/conf/managed-schema"
+    cmd: "podman exec -it {{ solr_container.container.Name }} sed -i -E 's/(<uniqueKey>)id(<.uniqueKey>)/\\1solr_id\\2/' /var/solr/data/multimedia-categories/conf/managed-schema"
+
+- name: reload core so we don't loose the edit of updating the unique key
+  ansible.builtin.command:
+    cmd: "podman exec -it {{ solr_container.container.Name }} curl 'http://127.0.0.1:8983/solr/admin/cores?action=RELOAD&core=multimedia-categories'"
 
 - name: add fields to schema
   ansible.builtin.include_tasks: solr_define_field.yml
