--- a/roles/mikeandwan_us/tasks/maw_solr_init.yml
+++ b/roles/mikeandwan_us/tasks/maw_solr_init.yml
@@ -248,3 +248,78 @@
       indexed: true
       stored: true
       required: true
+
+- name: define custom handler
+  ansible.builtin.set_fact:
+    maw_request_handler_definition:
+      name: /maw-photos-query
+      class: solr.SearchHandler
+      defaults:
+        rows: 24
+        echoParams: explicit
+        sort: score desc, year desc, name asc
+        defType: edismax
+        q.alt: '*:*'
+        wt: json
+        qf: |
+              allowed_roles
+              type
+              name^10
+              year
+
+              camera_makes
+              camera_models
+
+              comment_messages^4
+
+              poi_names^8
+              poi_types^4
+
+              rg_administrative_area_level_1^2
+              rg_administrative_area_level_2^2
+              rg_administrative_area_level_3^2
+              rg_country^2
+              rg_formatted_address
+              rg_locality^3
+              rg_neighborhood^3
+              rg_postal_code
+              rg_premise
+              rg_route
+              rg_sub_locality_level_1
+              rg_sub_locality_level_2
+        fl: |
+              solr_id
+              id
+              year
+              name
+              type
+              teaser_photo_height
+              teaser_photo_width
+              teaser_photo_path
+              teaser_photo_sq_height
+              teaser_photo_sq_width
+              teaser_photo_sq_path
+              score
+
+- name: set request handler definition
+  ansible.builtin.set_fact:
+    maw_request_handler_definition: "{{ lookup('file', 'solr_request_handler.json') }}"
+
+- name: see if custom request handler is defined
+  ansible.builtin.command:
+    cmd: "podman exec -it local-maw-solr curl 'http://localhost:8983/solr/multimedia-categories/config/requestHandler?componentName=/maw-photos-query'"
+  register: solr_handler_exists_result
+
+- name: add handler if it does not exist
+  ansible.builtin.command:
+    cmd: "podman exec -it local-maw-solr curl -X POST -H 'Content-type:application/json' --data-binary '{ \"add-requesthandler\": {{ maw_request_handler_definition | to_json }} }' 'http://localhost:8983/solr/multimedia-categories/config'"
+  when: not (solr_handler_exists_result.stdout | from_json).config.requestHandler['/maw-photos-query']
+
+- name: update handler if different
+  ansible.builtin.command:
+    cmd: "podman exec -it local-maw-solr curl -X POST -H 'Content-type:application/json' --data-binary '{ \"update-requesthandler\": {{ maw_request_handler_definition | to_json }} }' 'http://localhost:8983/solr/multimedia-categories/config'"
+  when: (solr_handler_exists_result.stdout | from_json).config.requestHandler['/maw-photos-query'] and maw_request_handler_definition != (solr_handler_exists_result.stdout | from_json).config.requestHandler['/maw-photos-query']
+
+- name: reload core for good measure
+  ansible.builtin.command:
+    cmd: "podman exec -it local-maw-solr curl 'http://127.0.0.1:8983/solr/admin/cores?action=RELOAD&core=multimedia-categories'"
