--- a/roles/mikeandwan_us/tasks/maw_maintenance.yml
+++ b/roles/mikeandwan_us/tasks/maw_maintenance.yml
@@ -47,7 +47,7 @@
 
 - name: Configure Postgres Backups
   ansible.builtin.include_role:
-    name: postgres_backup
+    name: postgres_backup_database
   loop:
     - db_name: maw_website
       service_name: "{{ mawus_config.env }}-postgres-backup-mawus"
