--- a/roles/postgres_backup_cleanup/tasks/main.yml
+++ b/roles/postgres_backup_cleanup/tasks/main.yml
@@ -4,6 +4,6 @@
     service_template: "{{ role_path }}/templates/postgres_backup_cleanup.service.j2"
     timer_template: "{{ role_path }}/templates/postgres_backup_cleanup.timer.j2"
 
-- name: Configure systemd job for database backup
+- name: Configure systemd job for database backup cleanup
   ansible.builtin.include_role:
     name: systemd_job
